# nivometro_tfg

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/communication/: CMakeLists.txt  Kconfig  Kconfig.projbuild  communication.c
components/communication/include/: communication.h
components/config/: config.c
components/config/include/: config.h
components/diagnostics/: diagnostics.c
components/diagnostics/include/: diagnostics.h
components/nivometro_sensors/: CMakeLists.txt
components/nivometro_sensors/include/: hcsr04p.h  hx711.h  nivometro_sensors.h
components/nivometro_sensors/src/: hcsr04p.c  hx711.c  nivometro_sensors.c
components/power_manager/: CMakeLists.txt  power_manager.c
components/power_manager/include/: power_manager.h
components/storage/: CMakeLists.txt  storage.c
components/storage/include/: storage.h
components/tasks/: CMakeLists.txt  tasks.c
components/tasks/include/: tasks.h
components/utils/: CMakeLists.txt  utils.c
components/utils/include/: utils.h
main/: CMakeLists.txt  Kconfig  Kconfig.projbuild  main.c
tfg_telegraf_influx_grafana/: .env  .env.example  docker-compose.yaml
tfg_telegraf_influx_grafana/telegraf/: telegraf.conf
